# viewer

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  architecture.md  pyproject.toml  run.py
backend/app/: acp_runtime.py  acp_sessions.py  agent_history.py  agent_loops.py  agent_tasks.py  codex_app_server.py  codex_app_server_sessions.py  codex_background_runner.py  codex_sessions.py  config.py  conventional_workspace.py  events.py  files.py  git_diff.py  hermes_acp.py  hermes_sessions.py  identity.py  logging.py  main.py  models.py  process_registry.py  profiling.py  restart.py  storage.py  super_workspace.py  super_workspace_memory.py  super_workspace_runtime.py  super_workspace_worker.py  terminals.py  users.py  voice.py  watcher.py  ws_clients.py
backend/tests/: test_codex_app_server.py  test_hermes_acp_sessions.py  test_super_workspace_role_prompts.py
docs/: agent_tasks.md
examples/agent_task_demo/: README.md  seed_demo.py
examples/agent_task_demo/shared/: simulate_metric.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  events.ts
frontend/src/components/: AgentPromptComposer.vue  AgentSessionTranscript.vue  AgentTasksPage.vue  ConfigPanel.vue  DirectoryPicker.vue  FileSidebar.vue  FileTree.vue  LocalFilePreview.vue  LoopTasksPage.vue  PaneTitleBar.vue  SplitNode.vue  SuperWorkspaceChatPane.vue  SuperWorkspacePage.vue  ViewerPane.vue  VoiceInputButton.vue  (+2 more)
scripts/: manage_viewer.py  restart_viewer.py
skills/agent-task-dag/: SKILL.md
(+55 files in other folders)
