[project]
name = "local-live-file-viewer"
version = "0.1.0"
description = "Read-only local live file viewer backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "watchfiles>=0.24.0",
  "pydantic-settings>=2.4.0",
  "loguru>=0.7.3",
  "websockets>=13.0",
  "whisperlivekit>=0.2.20.post1",
]

[dependency-groups]
dev = []
